syntax = "proto3";

option csharp_namespace = "ToDoGrpc";

package todoit;

service todoit
{
	//CreateList
	rpc CreateList(CreateListToDoRequest) returns (CreateListToDoResponse);
	//Add Item 
	rpc AddItemToList(AddItemToDoRequest) returns (AddItemToDoResponse);
	//ReadItem
	rpc ReadItem(ReadItemToDoRequest) returns (ReadItemToDoResponse);
	//ReadAll Tasks
	rpc ReadLists(Empty) returns (ListResponse);
	//UpdateItem
	rpc UpdateItem(UpdateItemToDoRequest) returns (UpdateItemToDoResponse);
	//DeleteItem
	rpc DeleteItem(DeleteItemToDoRequest) returns (DeleteItemToDoResponse);
	//MarkAsDone
	rpc MarkAsDone(MarkAsDoneToDoRequest) returns (MarkAsDoneToDoResponse);
}
//CreateList
message CreateListToDoRequest
{
	string listName=1;
}
message CreateListToDoResponse
{
	int32 Id=1;
}

// Add item 

message AddItemToDoRequest
{
	int32 ToDoListId =1;
	string ItemName =2;
	
}
message AddItemToDoResponse 
{
	int32 ToDoListId =1; 
	int32 Id = 2;
}
//ReadItem
message ReadItemToDoRequest 
{
	int32 ToDoListId =1; 
	int32 Id = 2;
}
message ReadItemToDoResponse  
{
	int32 ToDoListId =1; 
	string ListName=2;
	int32 Id = 3;
	string ItemName=4;
	bool IsDone = 5;
}

//List Read
message Empty
{
	
}
message ListResponse 
{
	repeated ListToDoItem Lists =1;
}
message ListToDoItem
{
	string ListName =1;
	int32 Id  =2;
	repeated ReadItemToDoResponse Items =3;
}
//UpdateItem
message UpdateItemToDoRequest
{
	int32 ToDoListId=1;
	int32 Id=2;
	string ItemName=3;
	bool IsDone=4;
}
message UpdateItemToDoResponse
{
	int32 ToDoListId=1;
	int32 Id=2;
}
//DeleteItem
message DeleteItemToDoRequest
{
	int32 ToDoListId=1;
	int32 Id=2;
}
message DeleteItemToDoResponse
{
	int32 ToDoListId=1;
	int32 Id=2;
}
	//MarkAsDone
message MarkAsDoneToDoRequest
{
	int32 ToDoListId=1;
	int32 Id=2 ;
}
message MarkAsDoneToDoResponse
{
	int32 ToDoListId=1;
	int32 Id=2;
	string ItemName=3;
	bool IsDone=4;
}